@@ -1,6 +1,7 @@
 2012-04-15 Stanislas Rolland  <typo3(arobas)sjbr.ca>
 	* Add feature #36123: Allow evaluation of email and captcha on the infomail form
 	* Cleanup changelog
+	* Follow-up 10 to feature #34447: No infomail feature for fe_users	
 
 2012-04-14 Stanislas Rolland  <typo3(arobas)sjbr.ca>
 	* Fix bug #36051: RegHash not cleared if link results in auto-login
